# weknora_python

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/docreader/: __init__.py  config.py  service.py
app/schemas/: __init__.py  document.py
app/wiki/: __init__.py  domain.py  enums.py  errors.py  folder_service.py  graph.py  linkify.py  models.py  page_service.py  query_service.py  scope.py  sql_folder_store.py  sql_page_store.py
docs/: Wiki阶段一.md  Wiki阶段三.md  Wiki阶段二.md  Wiki阶段四A.md  Wiki阶段四B.md  文档解析模块.md
examples/: wiki_fake_data.json
migrations/: env.py
migrations/versions/: 20260714_01_create_wiki_phase_one.py  20260714_02_create_wiki_ingest_phase_two.py  20260718_03_create_wiki_incremental_phase_three.py  20260719_04_add_wiki_log_result_outcome.py
tests/: test_docreader_service.py  test_document_api.py
tests/wiki/: test_celery_config.py  test_database_config.py  test_domain.py  test_enqueue_fake_cli.py  test_folder_service.py  test_graph.py  test_ingest_citations.py  test_ingest_dedup.py  test_ingest_enqueue.py  test_ingest_fakes.py  test_ingest_index_intro.py  test_ingest_map.py  test_ingest_reduce.py  test_ingest_retract.py  test_ingest_schemas.py  test_ingest_store.py  test_ingest_taxonomy.py  test_ingest_worker.py  test_linkify.py  test_migrations.py  test_models.py  test_outbox_dispatcher.py  test_page_service.py  test_phase_four_a_docs.py  test_phase_four_b_docs.py  test_phase_three_docs.py  test_phase_two_docs.py  (+9 more)
(+54 files in other folders)
