[project]
name = "graph"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "pillow>=12.0.0",
    "pydantic>=2.13.4",
    "pypdfium2>=5.8.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.30.0",
    "xlrd>=2.0.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.0.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
